<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veggie Crush</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="title_activity_game">Game</string>
    <string name="chain">Chaines</string>
    <string name="highscores">Scores</string>
    <string name="mode">Mode</string>
    <string name="time_Attack">Time Attack</string>
    <string name="blitz">Blitz</string>
    <string name="time">Temps</string>
    <string name="move">Déplacement</string>
    <string name="play_again">Rejouer</string>
    <string name="other_mode">Autre mode</string>
    <string name="quit">Quitter</string>
    <string name="score">Score</string>

</resources>
