<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:background="@drawable/menu_bg"
    tools:context=".Game" >

    <TextView
        android:id="@+id/txtChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/txtCountdown"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="@color/button_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/highscores"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/chain"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtChain"
        android:layout_below="@+id/txtChain"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnExitGame"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/exit"
        android:minHeight="0dp"
        android:minWidth="0dp" />

    <Button
        android:id="@+id/btnNewGame"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:background="@drawable/refresh"
        android:minHeight="0dp"
        android:minWidth="0dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/btnNewGame"
        android:text="@string/mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/TxtMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/btnExitGame"
        android:text="@string/time_Attack"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/move"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtChain"
        android:layout_alignRight="@+id/TxtMode"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="#ffffff" />
    
    <com.kingdom.veggiecrush.GameView
        android:id="@+id/gameView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>