<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    tools:context=".Highscores" >

    <Button
        android:id="@+id/btnOtherMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPlayAgain"
        android:layout_centerHorizontal="true"
        android:text="@string/other_mode"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_toLeftOf="@+id/btnOtherMode"
        android:text="@string/play_again"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOtherMode"
        android:layout_alignBottom="@+id/btnOtherMode"
        android:layout_toRightOf="@+id/btnOtherMode"
        android:text="@string/quit"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/highscores"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPlayAgain"
        android:layout_below="@+id/textViewScores"
        android:layout_marginTop="18dp" >

        <TableRow
            android:id="@+id/scoresRow1"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >
            
            <TextView 
                android:id="@+id/scoresName1"
                android:text=""
                android:layout_weight="1"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/scoresScore1"
                android:text=""
                android:layout_weight="1" 
                android:layout_width="match_parent" />
            
        </TableRow>

        <TableRow
            android:id="@+id/scoresRow2"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/scoresName2"
                android:text="nom2"
                android:layout_weight="1"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/scoresScore2"
                android:text="score2"
                android:layout_weight="1" 
                android:layout_width="match_parent" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/scoresRow3"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/scoresName3"
                android:text="nom3"
                android:layout_weight="1"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/scoresScore3"
                android:text="score3"
                android:layout_weight="1" 
                android:layout_width="match_parent" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/scoresRow4"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/scoresName4"
                android:text="nom4"
                android:layout_weight="1"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/scoresScore4"
                android:text="score4"
                android:layout_weight="1" 
                android:layout_width="match_parent" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/scoresRow5"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/scoresName5"
                android:text="nom5"
                android:layout_weight="1"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/scoresScore5"
                android:text="score5"
                android:layout_weight="1" 
                android:layout_width="match_parent" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

</RelativeLayout>
